<resources>
    <string name="app_name">WWWJDIC for Android</string>
    <string name="app_name_short">WWWJDIC</string>
    <string name="translationError">Error</string>
    <string-array name="dictionary_codes_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>E</item>
        <item>Q</item>
        <item>F</item>
    </string-array>
    <string-array name="dictionary_idxs_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string-array name="dictionaries_array">
        <item>General</item>
        <item>Japanese Names</item>
        <item>Computing/Telecomm</item>
        <item>Life Sciences/Bio-Med</item>
        <item>Legal Terms</item>
        <item>Finance/Marketing</item>
        <item>Buddhism</item>
        <item>Miscellaneous</item>
        <item>Engineering/Science</item>
        <item>Linguistics</item>
        <item>River &amp; Water Systems</item>
        <item>Automobile Industry</item>
        <item>Japanese-German</item>
        <item>Japanese-French</item>
        <item>Japanese-Russian</item>
        <item>Japanese-Swedish</item>
        <item>Japanese-Hungarian</item>
        <item>Japanese-Spanish</item>
        <item>Japanese-Dutch</item>
        <item>Japanese-Slovenian</item>
        <item>Japanese-Italian</item>
        <item>Japanese Wordnet</item>
        <item>Combined Jpn-Eng</item>
        <item>Work-in-progress</item>
    </string-array>
    <string-array name="kanji_search_codes_array">
        <item>J</item>
        <item>C</item>
        <item>B</item>
        <item>E</item>
        <item>U</item>
        <item>J</item>
        <item>P</item>
        <item>Y</item>
        <item>W</item>
    </string-array>
    <string-array name="kanji_search_types_array">
        <item>Kanji or reading</item>
        <item>Stroke count</item>
        <item>Radical number</item>
        <item>English meaning</item>
        <item>Unicode code (hex)</item>
        <item>JIS code (hex)</item>
        <item>SKIP code</item>
        <item>Pinyin reading</item>
        <item>Korean reading</item>
    </string-array>
    <string name="about_text">WWWJDIC for Android, 2010</string>
    <string name="about_by">by Nikolay Elenkov</string>
    <string name="about_bugtracking">More info/issue reporting</string>
    <string name="bugtracker_url">http://code.google.com/p/wwwjdic</string>
    <string name="uses_wwwjdic">Uses Jim Breen\'s WWWJDIC</string>
    <string name="wwwjdic_link">ttp://wwwjdic.net</string>
    <string name="uses_weocr">Uses WeOCR </string>
    <string name="weocr_link">ttp://weocr.ocrgrid.org/</string>
    <string name="uses_kr">Uses kanji recognizer at </string>
    <string name="kr_link">ttp://kanji.sljfaq.org/kanji16/draw-canvas.html</string>
    <string name="select_dictionary">Select dictionary:</string>
    <string name="stroke_count">Stroke count:  </string>
    <string name="radical_number">Radical number: </string>
    <string name="english_meanings">English meanings</string>
    <string name="radical_strokes">Radical/strokes</string>
    <string name="codes_more">Codes and more</string>
    <string name="translation">Translation(s)</string>
    <string name="select_search_type">Select search type:</string>
    <string name="search">Search</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="loading">Loading. Please wait...</string>
    <string name="jis_code">JIS code: </string>
    <string name="sjis_code">SJIS code: </string>
    <string name="unicode_number">Unicode number: </string>
    <string name="classical_radical">Classical radical number: </string>
    <string name="freq_rank">Frequency rank: </string>
    <string name="grade">Grade: </string>
    <string name="jlpt_level">JLPT level: </string>
    <string name="jlpt_level_label">JLPT level: </string>
    <string name="skip_code">SKIP code: </string>
    <string name="korean_reading">Korean reading: </string>
    <string name="pinyn">Pinyin: </string>
    <string name="more">More...</string>
    <string name="dictionary_label">Dictionary:</string>
    <string name="dictionary">Dictionary</string>
    <string name="kanji_lookup">Kanji Lookup</string>
    <string name="about">About</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="strokes">Strokes: </string>
    <string name="select">Select...</string>
    <string name="radical">Radical: </string>
    <string name="timeout_error_message">Connection has timed out. Check your network
        connection. If the problem persists, try setting a different WWWJDIC mirror in Settings.</string>
    <string name="socket_error_message">Failed to connect to WWWJDIC. Check your network
        connection. If the problem persists, try setting a different WWWJDIC mirror in Settings.</string>
    <string name="generic_error_message">An unexpected error has occurred. Try setting a different WWWJDIC mirror in Settings. If that doesn\'t help, please report
        this (see About).</string>
    <string name="ocr_hint1">* Align text to guide lines (approx. is OK),
        then
        press center button/tap screen to capture.</string>
    <string name="ocr_hint2">* Crop a rectangular area (single line) on the
        next
        screen and press \'Save\' to OCR.</string>
    <string name="ocr_hint3"> Press あ/漢/文 to send text to dictionary screen.</string>
    <string name="pref_ocr">OCR settings</string>
    <string name="pref_weocr_server">WeOCR server</string>
    <string name="pref_weocr_server_summary">Don\'t use the backup server if the main one
        is
        online</string>
    <string-array name="weocr_mirror_names">
        <item>maggie (main)</item>
        <item>jimbocho (backup)</item>
    </string-array>
    <string-array name="weocr_mirror_urls">
        <item>http://maggie.ocrgrid.org/cgi-bin/weocr/nhocr.cgi</item>
        <item>http://jimbocho.ocrgrid.org/cgi-bin/weocr/nhocr.cgi</item>
    </string-array>
    <string name="pref_weocr_timeout">WeOCR timeout</string>
    <string name="pref_timeout_summary">[seconds]</string>
    <string name="pref_wwwjdic">WWWJDIC settings</string>
    <string name="pref_wwwjdic_mirror">WWWJDIC mirror</string>
    <string-array name="wwwjdic_mirror_names">
        <item>Australia</item>
        <item>Canada</item>
        <item>EU</item>
        <item>Japan</item>
        <item>Sweden</item>
        <item>USA</item>
    </string-array>
    <string-array name="wwwjdic_mirror_coords">

        
        <item>033:51:35/151:12:40</item>
        
        <item>043:42:59/079:20:26</item>
        
        <item>048:12:32/016:22:21</item>
        
        <item>035:42:20/139:42:54</item>
        
        <item>059:21:00/018:04:00</item>
        
        <item>040:43:00/074:00:00</item>
    </string-array>
    <string-array name="wwwjdic_mirror_urls">
        <item>http://www.csse.monash.edu.au/~jwb/cgi-bin/wwwjdic.cgi</item>
        <item>http://ryouko.imsb.nrc.ca/cgi-bin/wwwjdic</item>
        <item>http://jp.celltica.com/cgi-bin/wwwjdic</item>
        <item>http://mygengo.com/wwwjdic/cgi-data/wwwjdic</item>
        <item>http://wwwjdic.se/cgi-bin/wwwjdic.cgi</item>
        <item>http://www.edrdg.org/cgi-bin/wwwjdic/wwwjdic</item>
    </string-array>
    <string name="pref_wwwjdic_timeout">WWWJDIC timeout</string>
    <string name="pref_ocr_dump_cropped_images">Dump cropped images</string>
    <string name="pref_ocr_dump_cropped_images_summary">Dump to /sdcard/wwwjdic (for debugging)</string>
    <string name="pref_kr">Kanji recognizer settings</string>
    <string name="pref_kr_url">Kanji recognizer URL</string>
    <string name="pref_kr_timeout">Kanji recognizer timeout</string>
    <string name="pref_kr_use_kanji_recognizer">Use Kanji Recognizer</string>
    <string name="pref_kr_use_kanji_recognizer_summary">Use the Kanji Recognizer app for handwriting
        recognition.</string>
    <string name="settings">Settings</string>
    <string name="ocr">OCR</string>
    <string name="write_kanji">Write kanji</string>
    <string name="hkr_failed">Character recognition failed</string>
    <string name="ws_hkr_failed">Character recognition failed.</string>
    <string name="clear">Clear</string>
    <string name="hiragana_a">あ</string>
    <string name="kanji_kan">漢</string>
    <string name="look_ahead">Look\nahead</string>
    <string name="hkr_abbrev">HKR</string>
    <string name="pref_sod">Stroke order diagrams settings</string>
    <string name="pref_sod_server_timeout">SOD server timeout</string>
    <string name="pref_sod_animation_delay">Stroke animation delay</string>
    <string name="pref_sod_animation_delay_summary">[milliseconds]</string>
    <string name="delete_all">Delete all</string>
    <string name="look_up">Look up</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="favorites_hist">Favorites/Hist.</string>
    <string name="kanji_bun">文</string>
    <string name="max_num_examples">Max\nexamples:</string>
    <string name="exact_match">Exact match \n(Eng. only)</string>
    <string name="enter_eng_or_jap">Enter English or Japanese</string>
    <string name="enter_kanji_search_key">Enter kanji search key</string>
    <string name="look_up_all_kanji">Look up all kanji</string>
    <string name="copy_jp">Copy Japanese</string>
    <string name="copy_eng">Copy English</string>
    <string name="search_type">Search type:</string>
    <string name="import_items">Import</string>
    <string name="export_items">Export</string>
    <string name="filter">Filter</string>
    <string name="pref_enable_analytics">Enable analytics</string>
    <string name="pref_analytics_summary">Send anonymous usage statistics to
        help make
        WWWJDIC a better app.</string>
    <string name="remove_stroke">Undo</string>
    <string name="select_mode">Select mode:</string>
    <string name="mode">Mode:</string>
    <string name="pref_export">Export</string>
    <string name="pref_export_meanings_separator_char">Meanings separtor char</string>
    <string name="pref_export_meanings_separator_char_summary">Character to separate mutiple meanings with when
        exporting to CSV/Anki.</string>
    <string name="kanji_extra_search">Additional search methods</string>
    <string name="hwr_search">Handwriting</string>
    <string name="ocr_search">OCR</string>
    <string name="multi_radical_search">Multi-radical</string>
    <string name="pref_disable_acra">Automatic error reports</string>
    <string name="pref_acra_disabled">Reporting disabled</string>
    <string name="pref_acra_enabled">Reporting enabled</string>
    <string name="pref_enable_update_check">Check for updates</string>
    <string name="pref_enable_update_check_summary">If enabled will automatically check 
    for an updated version and notify you if available.</string>
    <string name="pref_maintenance">App maintenance</string>
    <string name="gallery">Gallery</string>
</resources>