<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_filter"
        android:icon="@drawable/ic_menu_filter"
        android:title="@string/filter"
        android:orderInCategory="0" 
        android:showAsAction="ifRoom" />    
     <item android:id="@+id/menu_import"
        android:icon="@drawable/ic_menu_import"
        android:title="@string/import_items"
        android:orderInCategory="1"
        android:showAsAction="ifRoom" />
     <item android:id="@+id/menu_export"
        android:icon="@drawable/ic_menu_export"
        android:title="@string/export_items"
        android:orderInCategory="2"
        android:showAsAction="ifRoom" /> 
      <item android:id="@+id/menu_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete_all"
        android:orderInCategory="3" 
        android:showAsAction="never" />    
</menu>
