<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
    <LinearLayout android:id="@+id/kanjiLookupTab"
        android:orientation="vertical" android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:padding="15dip"
        android:layout_gravity="top" android:minHeight="200px">
        <EditText android:layout_height="wrap_content"
            android:layout_width="fill_parent" android:id="@+id/kanjiInputText"
            android:inputType="text" android:lines="1"
            android:hint="@string/enter_kanji_search_key"
            android:imeOptions="actionDone" />
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:orientation="horizontal"
            android:id="@+id/searchTypeSelectionLayout" android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center_vertical|center_horizontal">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/searchTypeLabel"
                android:text="@string/search_type" android:textSize="16sp"
                android:textColor="#FFFF" android:gravity="center_vertical"></TextView>
            <Spinner android:layout_height="wrap_content"
                android:id="@+id/kanjiSearchTypeSpinner"
                android:layout_width="wrap_content"
                android:layout_marginLeft="5px" android:minWidth="320px"
                android:prompt="@string/select_search_type"></Spinner>
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:orientation="horizontal"
            android:id="@+id/strokeCountLayout" android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center_vertical|center_horizontal">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radicalLabel"
                android:text="@string/radical" android:textSize="12sp"
                android:textColor="#FFFF" android:gravity="center_vertical"></TextView>
            <EditText android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:id="@+id/radicalInputText"
                android:lines="1" android:text="  " android:minWidth="40dp"
                android:cursorVisible="false" android:focusable="false"
                android:textSize="18sp" android:inputType="none"></EditText>
            <Button android:id="@+id/selectRadicalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="12sp"
                android:text="@string/select" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/strokeCountLabel"
                android:text="@string/strokes" android:textSize="12sp"
                android:textColor="#FFFF" android:gravity="center_vertical"></TextView>
            <EditText android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:id="@+id/strokeCountMinInput"
                android:lines="1" android:inputType="numberDecimal"
                android:textSize="12sp" android:hint="@string/min"
                android:maxLength="2" android:imeOptions="actionNext"></EditText>
            <EditText android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:id="@+id/strokeCountMaxInput"
                android:lines="1" android:inputType="numberDecimal"
                android:textSize="12sp" android:hint="@string/max"
                android:maxLength="2"></EditText>
        </LinearLayout>
        <Button android:layout_height="wrap_content" android:id="@+id/kanjiSearchButton"
            android:layout_width="fill_parent" android:text="@string/search"></Button>
        <org.nick.wwwjdic.history.FavoritesAndHistorySummaryView
            android:id="@+id/kanji_history_summary"
            android:layout_width="fill_parent" 
            android:layout_height="120dp" />
       <TextView android:id="@+id/extraSearchLabel" 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" 
                android:text="@string/kanji_extra_search"
                android:textSize="18sp" 
                android:textColor="#FFFF"
                android:paddingLeft="5dp" 
                android:gravity="left"/>   
        <LinearLayout android:id="@+id/kanjiSearchLayout" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:orientation="horizontal"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp" 
            android:gravity="center" 
            android:layout_gravity="center">
            <TextView android:id="@+id/hwrSearchLink" 
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" 
                android:text="@string/hwr_search"
                android:textSize="16sp"  
                android:textColor="#FFFF" 
                android:gravity="left" 
                android:layout_gravity="center" />
            <TextView android:id="@+id/ocrSearchLink" 
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" 
                android:text="@string/ocr_search" 
                android:textSize="16sp"  
                android:textColor="#FFFF" 
                android:gravity="center"/>
            <TextView android:id="@+id/multiRadicalSearchLink" 
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" 
                android:text="@string/multi_radical_search" 
                android:textSize="16sp"  
                android:textColor="#FFFF" 
                android:gravity="left"/>
         </LinearLayout>     
    </LinearLayout>
</ScrollView>