<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_context_example_lookup_kanji"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/look_up_all_kanji"
        android:orderInCategory="0" 
        android:showAsAction="never"/>
     <item android:id="@+id/menu_context_example_copy_jp"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/copy_jp"
        android:orderInCategory="1" 
        android:showAsAction="never"/>
     <item android:id="@+id/menu_context_example_copy_eng"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/copy_eng"
        android:orderInCategory="2" 
        android:showAsAction="never"/>
</menu>
