<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
    <LinearLayout android:id="@+id/exampleSearchTab"
        android:orientation="vertical" android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:padding="15dip"
        android:layout_gravity="top" android:minHeight="200px">
        <EditText android:layout_height="wrap_content"
            android:layout_width="fill_parent" android:id="@+id/exampleInputText"
            android:inputType="text" android:lines="1"
            android:hint="@string/enter_eng_or_jap" android:maxLength="256" />
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:orientation="horizontal"
            android:id="@+id/modeLayout" android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center_vertical|center_horizontal">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/modeLabel"
                android:text="@string/mode" android:textSize="16sp"
                android:textColor="#FFFF" android:gravity="center_vertical"></TextView>
            <Spinner android:layout_height="wrap_content"
                android:id="@+id/modeSpinner" android:layout_width="wrap_content"
                android:layout_marginLeft="5px" android:minWidth="320px"
                android:prompt="@string/select_mode"></Spinner>
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:orientation="horizontal"
            android:id="@+id/examplesOptionsLayout" android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center_vertical|center_horizontal">
            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:textColor="#ffff"
                android:textSize="12sp" android:text="@string/max_num_examples"
                android:layout_gravity="center_vertical" />
            <EditText android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:id="@+id/maxExamplesInput"
                android:lines="1" android:inputType="numberDecimal"
                android:textSize="12sp" android:hint="@string/max"
                android:maxLength="3" android:text="20"
                android:layout_gravity="center_vertical"></EditText>
            <CheckBox android:layout_width="wrap_content"
                android:id="@+id/exampleExactMatchCb" android:text="@string/exact_match"
                android:textSize="12sp" android:layout_marginLeft="4dip"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"></CheckBox>
        </LinearLayout>
        <Button android:layout_height="wrap_content" android:id="@+id/exampleSearchButton"
            android:layout_width="fill_parent" android:text="@string/search"></Button>
        <org.nick.wwwjdic.history.FavoritesAndHistorySummaryView
            android:id="@+id/examples_history_summary"
            android:layout_width="fill_parent" android:layout_height="60dp" />
    </LinearLayout>
</ScrollView>